--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="https://raw.githubusercontent.com/ZKitcher/Machine_Learning/main/NNmin.js"></script>
+    <script src="https://zkitcher.github.io/NNmin.js"></script>
     <script type="text/javascript" src="js/require.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
