Update to the file imports.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="https://zkitcher.github.io/NNmin.js"></script>
-    <script type="text/javascript" src="js/require.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js" defer></script>
+    <script src="https://zkitcher.github.io/NNmin.js" defer></script>
+    <script type="text/javascript" src="require.js" defer></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 </head>
